--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Стартовый шаблон сборки",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
     "eslint": "7.1.0",
     "eslint-config-htmlacademy": "0.4.x",
     "gulp": "4.0.x",
+    "gulp-babel": "^8.0.0",
     "gulp-better-rollup": "^4.0.1",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^5.0.3",
