--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sourcemaps": "2.6.x",
     "gulp-svgstore": "^7.0.1",
     "gulp-webp": "^4.0.1",
+    "object-fit-images": "^3.2.4",
     "pixel-glass": "^1.0.13",
     "posthtml-include": "^1.2.0",
     "rollup": "^1.32.1",
@@ -59,6 +60,7 @@
   "dependencies": {
     "del": "^4.1.1",
     "gulp-concat": "^2.6.1",
+    "jquery": "3.5.1",
     "selectize": "^0.12.6"
   }
 }
